fix(a11y): Make timestamp readable by JAWS

--- a/scss/notification.scss
+++ b/scss/notification.scss
@@ -31,6 +31,7 @@
 }
 .bx--toast-notification__caption {
     font-size: 1rem;
+    display: inline;
 }
 
 .toast {
